--- a/src/app/shared/components/card-moon-phase/card-moon-phase.component.html
+++ b/src/app/shared/components/card-moon-phase/card-moon-phase.component.html
@@ -2,31 +2,23 @@
   <div class="card-body">
     <h5 class="card-title">Other Infos <span>| Today</span></h5>
 
-    <div class="d-flex">
+    <div class="d-flex" *ngIf="date">
       <div class="col-2">
-        <span style="font-size: 50px;">{{getMoonPhaseEmoji()}}</span>
+        <span style="font-size: 50px;">{{getMoonPhaseEmoji(date)}}</span>
       </div>
       <div class="col-6 d-flex align-items-center">
-        <h6 class="text-muted text-sx-start fs-4">{{getMoonPhaseDescription()}}</h6>
+        <h6 class="text-muted text-sx-start fs-4">{{getMoonPhaseDescription(date)}}</h6>
       </div>
       
-      <div class="col-4 d-flex row align-items-center">
+      <div class="col-4 d-flex row align-items-center" *ngIf="_data$">
           <div class="d-flex justify-content-center">
-            🌅<h5 class="ps-2">08:25am</h5>
+            🌅<h4 class="ps-2">{{sunrise}}</h4>
           </div>
           <div class="d-flex justify-content-center">
-            🌃<h5 class="ps-2">17:25pm</h5>
+            🌃<h4 class="ps-2">{{sunset}}</h4>
           </div>      
         </div>
     </div>
 
   </div>
 </div>
-
-
-          <!--div class="d-flex justify-content-center">
-            🌅<h5 class="ps-2">08:25am</h5>
-          </div>
-          <div class="d-flex justify-content-center">
-            🌃<h5 class="ps-2">17:25pm</h5>
-          </div-->
