--- a/src/app/shared/components/card-temp-day/card-temp-day.component.html
+++ b/src/app/shared/components/card-temp-day/card-temp-day.component.html
@@ -1,61 +1,41 @@
 <div class="card info-card sales-card">
   <div class="card-body">
     <h5 class="card-title">Temperature <span>| Today</span></h5>
-    <div class="d-flex row" *ngIf="data$ | async as data">
-      
+    <div class="d-flex row" *ngIf="data$">
       <div class="col-6">
-
-
-
         <div class="d-flex" >
           <div class="col-5" style="text-align: -webkit-right;">
             <div class="card-icon rounded-circle d-flex" style="padding-top: 24px;">
-              <span style="font-size: 60px;">{{getEmojyByCodeWeatherCode(data["current"].weather_code)}}</span>
+              <span style="font-size: 60px;">{{getEmojyByCodeWeatherCode(data$["current"].weather_code)}}</span>
             </div>
           </div>
-          
-          <div class="col-7 ps-4">
-            <h6>{{data["current"].temperature_2m}}°</h6>
+          <div class="col-7 ps-1" *ngIf="data$">
+            <h6 class="ps-3 fs-1">{{getTemp()}}°</h6>
             <div class=" d-flex">
-              <span class="d-flex">🌡️ <h4 class="text-muted ps-2 d-flex">{{data["current"].apparent_temperature}}°</h4></span>
+              <span class="d-flex">🌡️ <h4 class="text-muted fs-5 ps-2 d-flex">{{getFeelsLike()}}°</h4></span>
             </div>
-  
             <div class="d-flex justify-content-center">
             </div>
           </div>
         </div>
         <div class="pt-2" >
-          <!--div class="d-flex justify-content-center">
-            🌅<h5 class="ps-2">08:25am</h5>
-          </div>
-          <div class="d-flex justify-content-center">
-            🌃<h5 class="ps-2">17:25pm</h5>
-          </div-->
         </div>
-        <div class="d-flex justify-content-center">
-          💨<h5 class="ps-2">11 km/h</h5>
+        <div class="d-flex justify-content-center" *ngIf="getWind()">
+          <h5 class="ps-2 fs-6">🍃{{getWind()}} km/h</h5>
         </div>
-
       </div>
-      
       <div class="col-6 d-flex row align-content-center">
         <div class="d-flex justify-content-center">
-          🔥<h4 class="ps-2">{{data["daily"].temperature_2m_max[0] }}° max</h4>
+          🔥<h4 class="ps-2">{{ getMaxTemp() }}° max</h4>
         </div>
         <div class="d-flex justify-content-center">
-          ❄️<h4 class="ps-2">{{data["daily"].temperature_2m_min[0] }}° min</h4>
+          ❄️<h4 class="ps-2">{{ getMinTemp() }}° min</h4>
         </div>
         <div class="d-flex justify-content-center">
-          💧<h4 class="ps-2">89%</h4>
+          💧<h4 class="ps-2">{{data$["current"].relative_humidity_2m}}%</h4>
           
         </div>
-        <div class="d-flex justify-content-center">
-          <h4 class="ps-2"></h4>
-        </div>
-        
       </div>
-      
-      
     </div>
   </div>
 </div>
