--- a/src/app/shared/components/card-moon-phase/card-moon-phase.component.html
+++ b/src/app/shared/components/card-moon-phase/card-moon-phase.component.html
@@ -1,6 +1,6 @@
 <div class="card info-card">
   <div class="card-body">
-    <h5 class="card-title">Other Infos <span>| Today</span></h5>
+    <h5 class="card-title">Other Infos <span>| {{getTodayDescription()}}</span></h5>
 
     <div class="d-flex" *ngIf="date">
       <div class="col-2">
@@ -10,7 +10,7 @@
         <h6 class="text-muted text-sx-start fs-4">{{getMoonPhaseDescription(date)}}</h6>
       </div>
       
-      <div class="col-4 d-flex row align-items-center" *ngIf="_data$">
+      <div class="col-4 d-flex row align-items-center" *ngIf="data$">
           <div class="d-flex justify-content-center">
             🌅<h4 class="ps-2">{{sunrise}}</h4>
           </div>
