--- a/src/app/shared/components/card-temp-day/card-temp-day.component.html
+++ b/src/app/shared/components/card-temp-day/card-temp-day.component.html
@@ -1,15 +1,15 @@
 <div class="card info-card sales-card">
-  <div class="card-body">
-    <h5 class="card-title">Temperature <span>| Today</span></h5>
-    <div class="d-flex row" *ngIf="data$">
+  <div class="card-body"  *ngIf="data">
+    <h5 class="card-title" >Temperature <span>| {{getTodayDescription()}}</span></h5>
+    <div class="d-flex row">
       <div class="col-6">
         <div class="d-flex" >
           <div class="col-5" style="text-align: -webkit-right;">
             <div class="card-icon rounded-circle d-flex" style="padding-top: 24px;">
-              <span style="font-size: 60px;">{{getEmojyByCodeWeatherCode(data$["current"].weather_code)}}</span>
+              <span style="font-size: 60px;">{{getEmojyByCodeWeatherCode(data["current"].weather_code)}}</span>
             </div>
           </div>
-          <div class="col-7 ps-1" *ngIf="data$">
+          <div class="col-7 ps-1">
             <h6 class="ps-3 fs-1">{{getTemp()}}°</h6>
             <div class=" d-flex">
               <span class="d-flex">🌡️ <h4 class="text-muted fs-5 ps-2 d-flex">{{getFeelsLike()}}°</h4></span>
@@ -32,7 +32,7 @@
           ❄️<h4 class="ps-2">{{ getMinTemp() }}° min</h4>
         </div>
         <div class="d-flex justify-content-center">
-          💧<h4 class="ps-2">{{data$["current"].relative_humidity_2m}}%</h4>
+          💧<h4 class="ps-2">{{data["current"].relative_humidity_2m}}%</h4>
           
         </div>
       </div>
