--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,8 +2,8 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a href="index.html" class="logo d-flex align-items-center">
-      <img src="assets/img/logo.png" alt="">
-      <span class="d-none d-lg-block">ClimaCity</span>
+      <img src="assets/cloudy.png" alt="">
+      <span class="d-none d-lg-block ps-1 pt-2">ClimaCity</span>
     </a>
   </div><!-- End Logo -->
 
