--- a/src/app/modules/today/today.component.html
+++ b/src/app/modules/today/today.component.html
@@ -1,6 +1,6 @@
 <div class="pagetitle">
   <div class="d-flex">
-    <div class="col-10">
+    <div class="col-5 col-md-9 ">
       <h1>Today</h1>
       <nav>
         <ol class="breadcrumb">
@@ -9,8 +9,10 @@
         </ol>
       </nav>
     </div>
-    <div class="col-2">
-      <input type="date" min="1941-01-01" max="{{getMaxDayForecast()}}" [ngModel]="date | date:'yyyy-MM-dd'" (ngModelChange)="changeDay($event)" class="form-control mt-2">
+    <div class="col-7 d-flex col-md-3 mt-2 mb-3 justify-content-end form-group">
+      <button (click)="previousDay()" type="button" class="btn btn-primary btn-sm  d-none d-md-block"><i class="bi bi-arrow-left"></i></button>
+      <input type="date" min="1941-01-01" max="{{getMaxDayForecast()}}" [ngModel]="formattedDate" (ngModelChange)="changeDay($event)" class="form-control ms-1 me-1 w-75">
+      <button (click)="nextDay()" [disabled]="disableNext()" class="btn btn-primary btn-sm  d-none d-md-block" ><i class="bi bi-arrow-right"></i></button>
     </div>
   </div>
 </div><!-- End Page Title -->
@@ -19,15 +21,20 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="row">
-        <div class="col-xxl-4 col-md-6">
+        <div class="col-xxl-5 col-md-6">
           <app-card-temp-day></app-card-temp-day>
         </div>
-        <div class="col-xxl-4 col-md-6">
+        <div class="col-xxl-7 col-md-6">
           <app-card-min-max-day></app-card-min-max-day>
         </div>
-        <div class="col-xxl-4 col-xl-12">
+
+
+
+        <!--div class="col-xxl-4 col-xl-12">
             <app-card-moon-phase></app-card-moon-phase>
-        </div>
+        </div-->
+
+
         <div class="col-12">
             <app-card-same-day></app-card-same-day>
         </div>
