--- a/src/app/shared/components/card-min-max-day/card-min-max-day.component.html
+++ b/src/app/shared/components/card-min-max-day/card-min-max-day.component.html
@@ -1,9 +1,10 @@
 <div class="card info-card revenue-card">
   <div class="card-body">
     <h5 class="card-title">History <span>| This day</span></h5>
-    <div class="row" *ngIf="!isLoading">
-      <div class="col-6">
-        <div class="d-flex align-items-center">
+    <div class="d-flex flex-column" *ngIf="!isLoading">
+
+
+        <div class="d-flex pt-4">
           <div class="card-icon rounded-circle d-flex" style="padding-top: 24px;">
             <span style="font-size: 60px;">🔥</span>
           </div>
@@ -15,10 +16,10 @@
             </div>
 
           </div>
-        </div>
       </div>  
-      <div class="col-6">
-        <div class="d-flex align-items-center">
+
+
+        <div class="d-flex pt-4">
           <div class="card-icon rounded-circle d-flex" style="padding-top: 24px;">
             <span style="font-size: 50px;">❄️</span>
           </div>
@@ -30,7 +31,6 @@
             </div>
           </div>
         </div>
-      </div>  
     </div>
   </div>
 </div>
