--- a/src/app/shared/components/card-same-day/card-same-day.component.html
+++ b/src/app/shared/components/card-same-day/card-same-day.component.html
@@ -1,7 +1,7 @@
 <div class="card">
 
   <div class="card-body">
-    <h5 class="card-title">Reports <span>/ {{getTodayDescription()}}</span></h5>
+    <h5 class="card-title">Temperature History <span>/ {{getTodayDescription()}}</span></h5>
 
     <div id="chart" *ngIf="chartOptions">
       <apx-chart
