added precipitation history to Today's section

--- a/src/app/modules/today/today.component.html
+++ b/src/app/modules/today/today.component.html
@@ -39,7 +39,9 @@
             <app-card-same-day></app-card-same-day>
         </div>
 
-
+        <div class="col-12">
+          <app-card-bar></app-card-bar>
+      </div>
 
       </div>
     </div><!-- End Left side columns -->
