--- a/src/app/shared/components/card-moon-phase/card-moon-phase.component.html
+++ b/src/app/shared/components/card-moon-phase/card-moon-phase.component.html
@@ -1,4 +1,4 @@
-<div class="card info-card">
+<!--div class="card info-card">
   <div class="card-body">
     <h5 class="card-title">Other Infos <span>| {{getTodayDescription()}}</span></h5>
 
@@ -21,4 +21,4 @@
     </div>
 
   </div>
-</div>
+</div-->
