dinamyc bar chart

--- a/src/app/modules/today/today.component.html
+++ b/src/app/modules/today/today.component.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-12">
-          <app-card-bar></app-card-bar>
+          <app-card-bar [series]="precipitationSeries"></app-card-bar>
       </div>
 
       </div>
