--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-@if (!citiesStore.selectedCity()) {
+@if (!citiesStore.selectedCity().city_code?.length) {
   <div class="p-5">
     <div class="row justify-content-center">
       <div class="col-lg-4"  (click)="goToCityDashboard('brussels')">
