--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -10,7 +10,7 @@
   <nav class="header-nav ms-auto">
     <ul class="d-flex align-items-center">
       <select class="form-select" aria-label="Default select example pw-4" (change)='changeCity($event)'>
-        <option [selected]="city.city_code === citiesStore.selectedCity()" *ngFor="let city of citiesStore.cities()" [value]="city.city_code">{{city.city_desc}}</option>
+        <option [selected]="city.city_code === citiesStore.selectedCity().city_code" *ngFor="let city of citiesStore.cities()" [value]="city.city_code">{{city.city_desc}}</option>
       </select>
     </ul>
   </nav><!-- End Icons Navigation -->
