--- a/src/app/modules/today/today.component.html
+++ b/src/app/modules/today/today.component.html
@@ -18,14 +18,14 @@
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
-  <div class="row">
+  <div class="row" *ngIf="data">
     <div class="col-lg-12">
       <div class="row">
         <div class="col-xxl-5 col-md-6">
           <app-card-temp-day></app-card-temp-day>
         </div>
         <div class="col-xxl-7 col-md-6">
-          <app-card-min-max-day></app-card-min-max-day>
+          <app-card-min-max-day [dataset]="data"></app-card-min-max-day>
         </div>
 
 
@@ -36,11 +36,11 @@
 
 
         <div class="col-12">
-            <app-card-same-day></app-card-same-day>
+            <app-card-same-day [dataset]="data"></app-card-same-day>
         </div>
 
         <div class="col-12">
-          <app-card-bar [series]="precipitationSeries"></app-card-bar>
+          <app-card-bar  [dataset]="data" [series]="precipitationSeries"></app-card-bar>
       </div>
 
       </div>
