--- a/src/app/shared/components/card-chart-line/card-chart-line.component.html
+++ b/src/app/shared/components/card-chart-line/card-chart-line.component.html
@@ -1,7 +1,7 @@
 <div class="card">
 
   <div class="card-body">
-    <h5 class="card-title">Precipitation in mm <span>/ {{getTodayDescription()}}</span></h5>
+    <h5 class="card-title">{{title}} <span>/ {{getTodayDescription()}}</span></h5>
 
     <div id="chart" *ngIf="chartOptions">
       <apx-chart
