--- a/src/app/shared/components/card-temp-day/card-temp-day.component.html
+++ b/src/app/shared/components/card-temp-day/card-temp-day.component.html
@@ -1,12 +1,12 @@
 <div class="card info-card sales-card">
-  <div class="card-body"  *ngIf="data">
+  <div class="card-body"  *ngIf="dataset">
     <h5 class="card-title" >Temperature <span>| {{getTodayDescription()}}</span></h5>
     <div class="d-flex row">
       <div class="col-7">
         <div class="d-flex" >
           <div class="col-5" style="text-align: -webkit-right;">
             <div class="card-icon rounded-circle d-flex" style="padding-top: 24px;">
-              <span style="font-size: 60px;">{{getEmojyByCodeWeatherCode(data["current"].weather_code)}}</span>
+              <span style="font-size: 60px;">{{getEmojyByCodeWeatherCode()}}</span>
             </div>
           </div>
           <div class="col-7 ps-1">
