--- a/src/app/modules/today/today.component.html
+++ b/src/app/modules/today/today.component.html
@@ -1,3 +1,9 @@
+
+@if (rawDataStore.isLoading()) {
+  <div class="loading-state">
+    <div class="loader"></div>
+  </div>
+}
 <div class="pagetitle">
   <div class="d-flex">
     <div class="col-5 col-md-8 ">
@@ -18,6 +24,8 @@
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
+
+
   <div class="row" *ngIf="dataset">
     <div class="col-lg-12">
       <div class="row">
