--- a/src/app/shared/components/card-chart-bar/card-chart-bar.component.html
+++ b/src/app/shared/components/card-chart-bar/card-chart-bar.component.html
@@ -1,7 +1,7 @@
 <div class="card">
 
   <div class="card-body">
-    <h5 class="card-title">{{title}} <span>/ {{subTitle}}</span></h5>
+    <h5 class="card-title">{{card().title}} <span *ngIf="card().subtitle">/ {{card().subtitle}}</span></h5>
 
     <div id="chart" *ngIf="chartOptions">
       <apx-chart
