--- a/src/app/shared/components/card-chart-line/card-chart-line.component.html
+++ b/src/app/shared/components/card-chart-line/card-chart-line.component.html
@@ -1,9 +1,9 @@
 <div class="card">
 
   <div class="card-body">
-    <h5 class="card-title">{{title}} <span *ngIf="subTitle">/ {{subTitle}}</span></h5>
+    <h5 class="card-title">{{card().title}} <span *ngIf="card().subtitle">/ {{card().subtitle}}</span></h5>
 
-    <div id="chart" *ngIf="chartOptions">
+    <div id="chart" *ngIf="!isLoading()">
       <apx-chart
         [colors]="chartOptions['colors']"
         [annotations]="chartOptions['annotations']"
