--- a/src/app/shared/components/card-min-max-day/card-min-max-day.component.html
+++ b/src/app/shared/components/card-min-max-day/card-min-max-day.component.html
@@ -1,7 +1,7 @@
 <div class="card info-card revenue-card">
   <div class="card-body">
     <h5 class="card-title">History <span>| This day</span></h5>
-    <div class="d-flex flex-column" *ngIf="dataset">
+    <div class="d-flex flex-column" *ngIf="!isLoading()">
 
 
         <div class="d-flex pt-4">
