--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,3 +1,6 @@
+@if (rawDataStore.isLoading()) {
+  <app-loader></app-loader>
+}
 <app-header></app-header>
 <!-- ======= Sidebar ======= -->
 <app-side-bar></app-side-bar>
