--- a/src/app/modules/today/today.component.less
+++ b/src/app/modules/today/today.component.less
@@ -2,3 +2,18 @@ input {
     max-width: 150px;
     min-width: 135px;
 }
+
+.header-filter {
+    position: sticky;
+    /* padding-top: initial; */
+    top: 4px;
+    z-index: 1040;
+    -webkit-transition: background-color 1000ms linear;
+    -ms-transition: background-color 1000ms linear;
+    transition: background-color 1000ms linear;
+    color: white;
+}
+
+.myElement.is-pinned {
+    background-color: blue;
+  } 
