--- a/src/app/modules/today/today.component.html
+++ b/src/app/modules/today/today.component.html
@@ -1,6 +1,4 @@
-
-<div class="pagetitle header-filter">
-  <div class="d-flex">
+  <div class="d-flex pagetitle header-filter">
     <div class="col-5 col-md-3 mt-1">
       <h1>Today</h1>
       <nav>
@@ -13,8 +11,9 @@
     <div class="col-7 d-flex col-md-9 mt-1 mb-3 mt-1 justify-content-end align-items-center form-group">
 
       <label class="pe-2 text-secondary">Limit years:</label>
-      <input (input)="interceptRange($event)" value="{{limitYearFrom}}" type="range" min="1940" max="2015" step="10" [value]="0" class="form-range pe-4" id="customRange1">
-
+      <input (change)="interceptRange($event)" value="{{limitYearFrom}}" type="range" min="1940" max="2015" step="25"
+        [value]="1970" class="form-range" id="customRange1">
+      <span class="range-slider__value">{{limitYearFrom}}</span>
       <button (click)="previousDay()" type="button" class="btn btn-primary btn-sm  d-none d-md-block"><i
           class="bi bi-arrow-left"></i></button>
       <input type="date" min="1941-01-01" max="{{getMaxDayForecast()}}" [ngModel]="formattedDate"
@@ -23,7 +22,6 @@
           class="bi bi-arrow-right"></i></button>
     </div>
   </div>
-</div>
 
 <section class="section dashboard">
   <div class="row">
@@ -45,17 +43,24 @@
         <div class="col-12">
           <app-card-chart-line [card]="minTemperature()"></app-card-chart-line>
         </div>
+        @defer (on viewport) {
 
-        <div class="col-12">
-          <app-card-chart-bar  [card]="precipitation()"></app-card-chart-bar>
-        </div>
-        <div class="col-12">
-          <app-card-chart-bar  [card]="precipitation()"></app-card-chart-bar>
-        </div>
-        <div class="col-12">
-          <app-card-chart-bar  [card]="precipitation()"></app-card-chart-bar>
+        <div class="col-6">
+          <app-card-chart-bar [card]="precipitation()"></app-card-chart-bar>
         </div>
 
+        <div class="col-6">
+          <app-card-chart-line [card]="maxWind()"></app-card-chart-line>
+        </div>
+        <div class="col-6">
+          <app-card-chart-bar [card]="precipitation()"></app-card-chart-bar>
+        </div>
+        } @placeholder() {
+        <div>
+          "Placeholder"
+
+        </div>
+        }
       </div>
     </div>
   </div>
