--- a/src/app/modules/today/today.component.less
+++ b/src/app/modules/today/today.component.less
@@ -1,12 +1,23 @@
 input {
     max-width: 150px;
     min-width: 135px;
-
 }
 
 input:in-range {
 }
 
+button {
+    background-color: #57A0EE;
+    border-color: #57A0EE;
+    color: white;
+}
+
+input {
+  :active {
+    color: red;
+
+  }
+}
 
 .header-filter {
     position: sticky;
@@ -44,3 +55,74 @@ input:in-range {
         content: '';
     }
 }
+
+/* HTML: <div class="loader"></div> */
+
+.loader-inative {
+    padding-left: 8px;
+    width: 30px;
+    height: 20px;
+    color: #adb5bd;
+    --c: radial-gradient(farthest-side,currentColor 96%,#0000);
+    background: 
+      var(--c) 100% 100% /30% 60%,
+      var(--c) 70%  0    /50% 100%,
+      var(--c) 0    100% /36% 68%,
+      var(--c) 27%  18%  /26% 40%,
+      linear-gradient(currentColor 0 0) bottom/67% 58%;
+    background-repeat: no-repeat;
+    position: relative;
+  }
+
+.loader {
+    width: 30px;
+    height: 20px;
+    color: #269af2;
+    --c: radial-gradient(farthest-side,currentColor 96%,#0000);
+    background: 
+      var(--c) 100% 100% /30% 60%,
+      var(--c) 70%  0    /50% 100%,
+      var(--c) 0    100% /36% 68%,
+      var(--c) 27%  18%  /26% 40%,
+      linear-gradient(currentColor 0 0) bottom/67% 58%;
+    background-repeat: no-repeat;
+    position: relative;
+  }
+  .loader:after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: inherit;
+    opacity: 0.4;
+    animation: l7 1s infinite;
+  }
+  @keyframes l7 {
+    to {transform:scale(1.8);opacity:0}
+  }
+  
+  .form-range::-webkit-slider-thumb {
+    background: #57A0EE;
+  }
+  .form-range::-moz-range-thumb {
+    background: #57A0EE;
+  }
+  .form-range::-ms-thumb {
+    background: #57A0EE;
+  }
+  @media (prefers-reduced-motion: reduce) {
+    .form-range::-webkit-slider-thumb {
+      -webkit-transition: none;
+      transition: none;
+    }
+  }
+  .form-range::-webkit-slider-thumb:active {
+    background-color: #2983FF;
+  }
+  .form-range::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 0.5rem;
+    color: transparent;
+    cursor: pointer;
+    border-color: transparent;
+    border-radius: 1rem;
+  }
